CORE-000: try some manual updates