@@ -13,16 +13,12 @@ dependencies {
     testCompile project(':ds2-oss-core-crypto-bouncycastle')
     testCompile project(':ds2-oss-core-testutils')
     testCompile group: 'org.eclipse.persistence', name: 'eclipselink', version: '3.0.1'
-    testCompile(group: 'org.glassfish.main.extras', name: 'glassfish-embedded-all', version: '4.0') {
-        exclude(module: 'tools-jar')
-    }
+    testCompile(group: 'org.glassfish.main.extras', name: 'glassfish-embedded-all', version: '5.1.0')
+//    testCompile(group: 'org.glassfish.main.extras', name: 'glassfish-embedded-all', version: '4.1.2') {
+//        exclude(module: 'tools-jar')
+//    }
     compileOnly 'org.slf4j:slf4j-api:1.7.26'
     compile(group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '8.0.0')
-}
-test.useTestNG()
-
-tasks.withType(Test) {
-    maxParallelForks = 1
 }
 
 bintray {
@@ -31,6 +27,14 @@ bintray {
 }
 
 test {
+    useTestNG()
+    maxParallelForks = 1
+    maxHeapSize="1024m"
+    jvmArgs '-XX:MaxPermSize=256m'
+    testLogging.showStandardStreams = true
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+    }
     systemProperty "ds2.app.sec.home", "target/dummySec"
     testLogging {
         events "passed", "skipped", "failed", "standardOut", "standardError"
